--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.4",
     "sass": "^1.54.9",
+    "swiper": "^8.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
