--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-spinners": "^0.13.4",
     "sass": "^1.54.9",
     "swiper": "^8.4.0",
