--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
