--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "lite-youtube-embed": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
+    "react-lite-youtube-embed": "^2.3.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
